--- a/dev/assets/themes/documenter-light.css
+++ b/dev/assets/themes/documenter-light.css
@@ -1,9 +1,3 @@
-@font-face {
-	font-family: JuliaMono-Regular;
-	font-display: fallback;	/* allow 100 milliseconds then display fallback */
-	src: url("https://cdn.jsdelivr.net/gh/cormullion/juliamono/webfonts/JuliaMono-Regular.woff2");
-}
-
 @charset "UTF-8";
 /* Font Awesome 5 mixin. Can be included in any rule that should render Font Awesome icons. */
 @keyframes spinAround {
@@ -322,7 +316,7 @@ code,
 pre {
   -moz-osx-font-smoothing: auto;
   -webkit-font-smoothing: auto;
-  font-family: "JuliaMono-Regular", "SFMono-Regular", "Menlo", "Consolas", "Liberation Mono", "DejaVu Sans Mono", monospace; }
+  font-family: "Roboto Mono", "SFMono-Regular", "Menlo", "Consolas", "Liberation Mono", "DejaVu Sans Mono", monospace; }
 
 body {
   color: #222222;
@@ -868,10 +862,10 @@ a.has-text-danger:hover, a.has-text-danger:focus {
   font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", "Helvetica", "Arial", sans-serif !important; }
 
 .is-family-monospace {
-  font-family: "JuliaMono-Regular", "SFMono-Regular", "Menlo", "Consolas", "Liberation Mono", "DejaVu Sans Mono", monospace !important; }
+  font-family: "Roboto Mono", "SFMono-Regular", "Menlo", "Consolas", "Liberation Mono", "DejaVu Sans Mono", monospace !important; }
 
 .is-family-code {
-  font-family: "JuliaMono-Regular", "SFMono-Regular", "Menlo", "Consolas", "Liberation Mono", "DejaVu Sans Mono", monospace !important; }
+  font-family: "Roboto Mono", "SFMono-Regular", "Menlo", "Consolas", "Liberation Mono", "DejaVu Sans Mono", monospace !important; }
 
 .is-block {
   display: block !important; }
@@ -7245,6 +7239,9 @@ h1:hover .docs-heading-anchor-permalink, h2:hover .docs-heading-anchor-permalink
   .docstring > section:hover a.docs-sourcelink {
     opacity: 1; }
 
+.documenter-example-output {
+  background-color: white; }
+
 .content pre {
   border: 1px solid #dbdbdb; }
 
@@ -7280,6 +7277,9 @@ h1:hover .docs-heading-anchor-permalink, h2:hover .docs-heading-anchor-permalink
   top: 0;
   right: 0; }
 
+.katex-display, mjx-container, .MathJax_Display {
+  margin: 0.5em 0 !important; }
+
 html {
   -moz-osx-font-smoothing: auto;
   -webkit-font-smoothing: auto; }
@@ -7290,6 +7290,8 @@ html {
  */
 #documenter .docs-main > article {
   overflow-wrap: break-word; }
+  #documenter .docs-main > article .math-container {
+    overflow-x: auto; }
 
 @media screen and (min-width: 1056px) {
   #documenter .docs-main {
@@ -7366,6 +7368,7 @@ html {
 
 #documenter .docs-main .docs-footer {
   display: flex;
+  flex-wrap: wrap;
   margin-left: 0;
   margin-right: 0;
   border-top: 1px solid #dbdbdb;
@@ -7379,6 +7382,13 @@ html {
     flex-grow: 1; }
   #documenter .docs-main .docs-footer .docs-footer-nextpage {
     text-align: right; }
+  #documenter .docs-main .docs-footer .flexbox-break {
+    flex-basis: 100%;
+    height: 0; }
+  #documenter .docs-main .docs-footer .footer-message {
+    font-size: 0.8em;
+    margin: 0.5em auto 0 auto;
+    text-align: center; }
 
 #documenter .docs-sidebar {
   display: flex;
@@ -7618,15 +7628,3 @@ Original highlight.js style (c) Ivan Sagalaev <maniac@softwaremaniacs.org>
 
 .hljs-strong {
   font-weight: bold; }
-
-/* local modifications to default */
-
-pre, code, kbd {
-    font-family: 'JuliaMono-Regular', 'SF Mono', 'Roboto Mono', Menlo, courier, monospace !important;
-}
-
-p > code {
-	color: #333 !important;
-	background-color: #eee !important;
-	font-size: 1em !important;
-}
